--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
-backend/src/main/resources/application.properties
+**backend/src/main/resources/application.properties
+ backend/src/main/resources/application.properties
