--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
 **backend/src/main/resources/application.properties
- backend/src/main/resources/application.properties
+ backend/src/main/resources/application.propertiesbackend/src/main/resources/application.properties
