--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "untitled11",
+  "name": "pathfinder",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,9 +10,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.21.2",
+    "react-scripts": "^3.0.1",
     "use-places-autocomplete": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
